--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
+    "ejs": "^4.0.1",
     "express": "^5.2.1",
+    "express-basic-auth": "^1.2.1",
     "helmet": "^8.1.0",
+    "jsdom": "^28.0.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.6",
     "multer": "^2.0.2",
     "nodemailer": "^8.0.1",
-    "nodemon": "^3.1.11",
-    "stripe": "^20.3.1"
+    "nodemon": "^3.1.11"
   }
 }
